--- a/PC/src/styles/index.scss
+++ b/PC/src/styles/index.scss
@@ -3,20 +3,20 @@
 @import './transition.scss';
 @import './other.scss';
 @import './element.scss';
-@import './tailwind.css';
+// @import './tailwind.css';
 @import './dark.scss';
 @import './login.scss';
 
-@font-face {
-	font-family: PingFangSC;
-	src: url('./PingFangSC-Regular.woff2');
-}
-@font-face {
-	font-family: PingFangSC-Medium;
-	src: url('./PingFangSC-Semibold.woff2');
-}
+// @font-face {
+// 	font-family: PingFangSC;
+// 	src: url('./PingFangSC-Regular.woff2');
+// }
+// @font-face {
+// 	font-family: PingFangSC-Medium;
+// 	src: url('./PingFangSC-Semibold.woff2');
+// }
 
-#app {
-    font-family: PingFangSC;
-}
+// #app {
+//     font-family: PingFangSC;
+// }
   
