--- a/PC/src/styles/login.scss
+++ b/PC/src/styles/login.scss
@@ -76,7 +76,7 @@
 }
 .tenant {
 	position: absolute;
-	top: 0.75rem;
+	top: 0.25rem;
 	right: 1.25rem;
 	z-index: 9;
 }
@@ -104,12 +104,22 @@
 	bottom: 0;
 	z-index: 0;
 }
+
+.wave:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+  }
 .login-container {
 	width: 100vw;
 	height: 100vh;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 18rem;
+	// grid-template-columns: repeat(2, 1fr);
+	// grid-gap: 18rem;
 	padding: 0 2rem;
 }
 
@@ -138,6 +148,7 @@
 
 .login-form {
 	width: 400px;
+	margin: auto;
 }
 
 .avatar {
@@ -191,4 +202,40 @@
 	.login-box {
 		justify-content: center;
 	}
+}
+
+
+
+
+.select-none {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    // background-color: antiquewhite;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.select-none::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 300%;
+    height: 100%;
+    // background-image: linear-gradient(to bottom right,
+    // rgb(25, 0, 255), rgb(111, 0, 255), rgb(242, 0, 250));
+    filter: blur(4px);
+    animation: bg-anim 10s alternate infinite linear;
+}
+
+@keyframes bg-anim {
+    from {
+        left: 0;
+    }
+    to {
+        left: -200%;
+    }
 }
