--- a/PC/src/styles/login.scss
+++ b/PC/src/styles/login.scss
@@ -76,16 +76,17 @@
 }
 .tenant {
 	position: absolute;
-	top: 0.25rem;
-	right: 1.25rem;
+	top: 0.1rem;
+	right: 0.2rem;
 	z-index: 9;
 }
 .mini_qr {
-	position: fixed;
-	right: 2rem;
-	bottom: 1rem;
-	padding: 36px;
-	z-index: 1000;
+	position: absolute;
+	left: 0.2rem;
+	bottom: 0.2rem;
+	// padding: 36px;
+	text-align: center;
+	// z-index: 1000;
 	img {
 		width: 120px;
 	}
@@ -118,6 +119,7 @@
 	width: 100vw;
 	height: 100vh;
 	display: grid;
+	position: relative;
 	// grid-template-columns: repeat(2, 1fr);
 	// grid-gap: 18rem;
 	padding: 0 2rem;
@@ -134,12 +136,6 @@
 	width: 500px;
 }
 
-.login-title {
-	font-size: 20px;
-	font-weight: 500;
-	font-family: PingFang SC, Arial, Hiragino Sans GB, Microsoft YaHei, sans-serif;
-	margin-bottom: 32px;
-}
 .login-box {
 	display: flex;
 	align-items: center;
@@ -238,4 +234,31 @@
     to {
         left: -200%;
     }
+}
+
+.login-right{
+	// width: 1200px;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: var(--el-color-primary);
+    box-shadow: -8px 0px 20px rgba(0,0,0,0.2);
+	text-align: center;
+
+}
+.login-right img{
+	width: 90%;
+	// margin: 0 60px;
+}
+.login-title,.toServer {
+	font-size: 50px;
+	font-weight: 500;
+	font-family: PingFang SC, Arial, Hiragino Sans GB, Microsoft YaHei, sans-serif;
+	// margin-bottom: 32px;
+	text-align: center;
+	color: #fff;
+}
+.toServer{
+	font-size: 20px;
 }
