--- a/PC/src/styles/loading.scss
+++ b/PC/src/styles/loading.scss
@@ -1,6 +1,11 @@
 .loading-next {
 	width: 100%;
 	height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 99999;
+    background: #fff;
 }
 .loading-next .loading-next-box {
 	position: absolute;
