--- a/PC/src/views/Chat/components/Message/components/messageList/index.scss
+++ b/PC/src/views/Chat/components/Message/components/messageList/index.scss
@@ -35,7 +35,7 @@
             max-width: 50%;
             min-height: 34px;
         }
-        .message_box_nickname {
+        .message_box_username {
             font-size: 14px;
             line-height: 20px;
             letter-spacing: 0.4px;
@@ -214,7 +214,7 @@
                     color: #333333;
                     font-size: 17px;
 
-                    .nickname {
+                    .username {
                         display: inline-block;
                         // width: 100%;
                         margin-left: 10px;
