--- a/PC/src/views/Chat/components/Message/components/inputBox/index.scss
+++ b/PC/src/views/Chat/components/Message/components/inputBox/index.scss
@@ -90,7 +90,7 @@
     width: 80px;
 }
 
-.iconfont {
+.chat_iconfont {
     margin-right: 12px;
     transition: all 0.3s ease;
     cursor: pointer;
