--- a/PC/src/views/Chat/components/Message/index.scss
+++ b/PC/src/views/Chat/components/Message/index.scss
@@ -52,7 +52,7 @@
     }
 }
 
-.easeim_safe_tips {
+.IM_PC_safe_tips {
     position: relative;
     padding: 12px 20px;
     background-color: #fff4e6;
@@ -65,7 +65,7 @@
     font-size: 12px;
     border: none;
 
-    .easeim_close_tips {
+    .IM_PC_close_tips {
         position: absolute;
         right: 10px;
         top: 10px;
